Feature: extend recom function with qco params (ALFA-133)
Feature: extend recom function with qco params (ALFA-133)

Reviewed-by: Szymon Mrozowski <smrozowski@silenteight.com>
Reviewed-by: Sławomir Korbas <skorbas@silenteight.com>
Reviewed-by: Norbert Graczykowski <ngraczykowski@silenteight.com>
Merged from: https://gitlab.silenteight.com/sens/scb-bridge/-/merge_requests/67